skinsdefaultdir="${pkgdatadir}/skins/default"

dist_skinsdefault_DATA = \
	background.png \
	button_simple.png \
	filter_slope.png \
	filter_type.png \
	keybmode.png \
	knob_boost.png \
	knob_boost_cut.png \
	knob_mix.png \
	knob_osc_octave.png \
	knob_osc_pitch.png \
	knob_spot.png \
	knob_width.png \
	layout.ini \
	osc_select.png \
	waveform_lfo.png \
	waveform_pics.png \
	waveform_pics_osc1.png

uninstall-hook:
	rm -rf $(DESTDIR)$(skinsdefaultdir)
